<resources>
    <string name="app_name">Vezbe11</string>
    <string name="movies">Movies</string>
    <string name="input">Add Movie</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="filter">filter</string>
    <string name="user">user</string>
    <string name="save">save</string>
    <string name="choose_a_meal">Choose a meal</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="enter_email">Enter email</string>
    <string name="this_week">This week</string>
    <string name="count">count</string>
    <string name="kcal">kcal</string>
    <string name="logout">logout</string>

</resources>