<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recyclerMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/days"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="@color/eva_purple"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/breakTV"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:text="@string/breakfast"
            android:textColor="@color/eva_green"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lunchTV"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lunch"
            android:textColor="@color/eva_green"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dinnerTV"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dinner"
            android:textColor="@color/eva_green"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/snackTV"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/snack"
            android:textColor="@color/eva_green"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/planerRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@color/eva_black"
        app:layout_constraintBottom_toTopOf="@id/emailLayout"
        app:layout_constraintTop_toBottomOf="@id/days" />

    <LinearLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@color/eva_purple"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/planerRecyclerView">

        <EditText
            android:id="@+id/editemailText"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:hint="@string/enter_email"
            android:inputType="text"
            android:textColor="@color/eva_green"
            android:textColorHint="@color/eva_green"
            android:textColorLink="@color/eva_green" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/eva_green"
            android:text="Send"
            android:textColor="@color/eva_purple" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>